samples/grpc-alb-envoy-edge-header-dynamic-forwardproxy/k8s_rest_tls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: envoy-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: <acm>
    external-dns.alpha.kubernetes.io/hostname: <domain>
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: envoy-svc
              servicePort: 10000
